--- a/package.json
+++ b/package.json
@@ -23,7 +23,19 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.6.16"
+    "sweetalert2": "^11.6.16",
+    "workbox-background-sync": "^6.5.4",
+    "workbox-broadcast-update": "^6.5.4",
+    "workbox-cacheable-response": "^6.5.4",
+    "workbox-core": "^6.5.4",
+    "workbox-expiration": "^6.5.4",
+    "workbox-google-analytics": "^6.5.4",
+    "workbox-navigation-preload": "^6.5.4",
+    "workbox-precaching": "^6.5.4",
+    "workbox-range-requests": "^6.5.4",
+    "workbox-routing": "^6.5.4",
+    "workbox-strategies": "^6.5.4",
+    "workbox-streams": "^6.5.4"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -37,6 +49,7 @@
     "dotenv": "^16.0.3",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
-    "vite": "^4.0.0"
+    "vite": "^4.0.0",
+    "vite-plugin-pwa": "^0.14.1"
   }
 }
