--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && yarn PWA",
     "preview": "vite preview",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "PWA": "workbox injectManifest workbox-config.cjs"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
@@ -18,24 +19,13 @@
     "react": "^18.2.0",
     "react-big-calendar": "^1.5.2",
     "react-datepicker": "^4.8.0",
+    "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.6.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.6.16",
-    "workbox-background-sync": "^6.5.4",
-    "workbox-broadcast-update": "^6.5.4",
-    "workbox-cacheable-response": "^6.5.4",
-    "workbox-core": "^6.5.4",
-    "workbox-expiration": "^6.5.4",
-    "workbox-google-analytics": "^6.5.4",
-    "workbox-navigation-preload": "^6.5.4",
-    "workbox-precaching": "^6.5.4",
-    "workbox-range-requests": "^6.5.4",
-    "workbox-routing": "^6.5.4",
-    "workbox-strategies": "^6.5.4",
-    "workbox-streams": "^6.5.4"
+    "sweetalert2": "^11.6.16"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.20.2",
@@ -50,6 +40,6 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "vite": "^4.0.0",
-    "vite-plugin-pwa": "^0.14.1"
+    "workbox-build": "^6.5.4"
   }
 }
